--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       var textField = document.getElementById("textField");
       textField.style.display = "block";
     }
+
+    function backToHome() {
+      var mainImage = document.getElementById("main-image");
+      mainImage.src = "./images/tu_logo_icon.jpg";
+    }
   </script>
 </head>
 <body>
@@ -31,11 +36,12 @@
     <h1>Lecture Halls Schedule<br>Please choose hall number</h1>
 
     <div id="button-container">
-      <button class="button-64" role="button" onclick="changeContent('G31', './images/image1.jpg')"><span class="text">G13</span></button>
+      <button id="button-64" class="button-64" role="button"><span class="text">G13</span></button>
       <button class="button-64" role="button" onclick="changeContent('G31', './images/image2.jpg')"><span class="text">G31</span></button>
       <button class="button-64" role="button" onclick="changeContent('G39', './images/image3.jpg')"><span class="text">G39</span></button>
       <button class="button-64" role="button" onclick="changeContent('G56', './images/image4.jpg')"><span class="text">G56</span></button>
       <button class="button-64" role="button" onclick="changeContent('L31', './images/image5.jpg')"><span class="text">L31</span></button>
+      <button class="button-64 return" role="button" onclick="backToHome()"><span class="text">Back to Home</span></button>
     </div>
 
     <div>
